EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==06/18/2009==
Derision: Fixed some flawed database queries and a few compile warnings.

==06/17/2009==
Derision: Removed redundant flymode on/off in water code (not needed since Rev161).
Trevius: New fields added to the alt_vars table to allow SoF and Titanium to both use it.
KLS: Aggro tweaks + melee spell procs wont proc off ranged attacks anymore.

Required SQL: /utils/sql/svn/687_aa_table_changes.sql

==06/16/2009==
Derision: Old corpses summoned by Expedient Recovery will no longer rebury after 5 seconds.
Derision: Added optional duration parameter to quest::popup.
Trevius: SoF - Adventure Merchant Selling is now functional.
Trevius: SoF - Items with click effects now show the min level required to click them.
Trevius: SoF - Items being sold now show the correct price that the merchant will pay for them.
cavedude: Changed the items-0.6.0-DR2-0.6.1-DR1-convert.sql error message to stop confusing people.
cavedude: Green con KOS NPCs will now aggro clients while sitting.
Derision: Spells Gems now stay greyed out after zoning until their recast time is met.
KLS: More aggro tweaks.
KLS: Fix for zone crash from world server.
WildcardX: Migrated more code for BOTS from database.cpp to bot.cpp.

==06/15/2009==
Trevius: SoF - The following fields now show up on items that have values set for them, but the stats are not actually used by the server yet:
	       svcorruption, purity, backstabdmg, dsmitigation, heroic_str, heroic_int, heroic_wis, heroic_agi, heroic_dex, heroic_sta
	       heroic_cha, heroic_mr, heroic_fr, heroic_cr, heroic_dr, heroic_pr, heroic_svcorrup, healamt, and spelldmg
Trevius: SoF - Corrected Max Stat calculation for SoF clients over level 75.
Trevius: Fix for compile error; should have been fixed already *hint*.
Trevius: More tweaks to make illusions work better with features and armor/helm graphics